Refactor build script, add linting